# gitlight

./: .env.example  .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
src/: app.d.ts  app.html  hooks.server.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  title_bar.rs  tray.rs
src/lib/: types.ts
src/lib/components/: Notification.svelte  index.ts
src/lib/components/common/: AnimatedLogo.svelte  Button.svelte  DragRegion.svelte  IconButton.svelte  InlineSelect.svelte  Input.svelte  Modal.svelte  ScrollbarContainer.svelte  Select.svelte  Switch.svelte  (+4 more)
src/lib/features/: createGithubNotificationData.ts  createGitlabNotificationData.ts  delayed-hover.ts  drag-actions.ts  fetchGithub.ts  fetchGitlab.ts  getGithubDiscussionData.ts  index.ts  intersection-action.ts  storage.ts
src/lib/helpers/: createEventData.ts  createNotificationData.ts  debounce.ts  drag-actions.ts  dragActions.ts  fetchGithub.ts  fetchGitlab.ts  formatRelativeDate.ts  getAppVersion.ts  getHex.ts  getIcon.ts  getNotificationIcon.ts  index.ts  lightenColor.ts  onScrollVisible.ts  openDesktopApp.ts  priorities.ts  priorityLabels.ts  reactiveFetch.ts  removeMarkdownSymbols.ts  searchNotificationHelper.ts  shadeColor.ts  storage.ts  workerInterval.ts
src/lib/icons/: AnsweredDiscussionIcon.svelte  Apple.svelte  ArrowRight.svelte  ArrowUp.svelte  ArrowUpIcon.svelte  Branch.svelte  Check.svelte  CheckIcon.svelte  ClosedIssueIcon.svelte  ClosedPullRequestIcon.svelte  Commit.svelte  CommitIcon.svelte  CompletedIssueIcon.svelte  Cross.svelte  CrossIcon.svelte  Discussion.svelte  DiscussionIcon.svelte  DoubleArrowIcon.svelte  DoubleCheckIcon.svelte  DraftPullRequestIcon.svelte  ExclamationMarkIcon.svelte  ExternalLink.svelte  ExternalLinkIcon.svelte  Folder.svelte  Gear.svelte  Github.svelte  GithubIcon.svelte  GitlabIcon.svelte  HeartIcon.svelte  IssueClosed.svelte  IssueDraft.svelte  IssueNotPlanned.svelte  IssueOpen.svelte  Lightning.svelte  Linux.svelte  Logo.svelte  Mail.svelte  MergedPullRequestIcon.svelte  MuteIcon.svelte  MutedIcon.svelte  (+38 more)
src/lib/stores/: accessToken.ts  events.ts  index.ts  stores.ts
src/lib/types/: common-types.ts  github-types.ts  gitlab-types.ts  index.ts  type-helpers.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
src/routes/(app)/: +layout.svelte
src/routes/dashboard/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
src/routes/login/: +page.svelte
src/routes/protected/: +page.svelte
src/styles/: _base.scss  _fonts.scss  _mixins.scss  _reset.scss  _screens.scss  _themes.scss  _typography.scss  _variables.scss
static/rive/: logo.riv
static/workers/: interval.js
(+91 files in other folders)
